--- a/src/main/client/src/app/general/nav/nav.component.html
+++ b/src/main/client/src/app/general/nav/nav.component.html
@@ -17,13 +17,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent" [class.show]="!navCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/app/books">Book Overview</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/app/book">New Book</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/app/movies">Movies Overview</a>
+        <a class="nav-link" routerLink="/app/movies">Screenings</a>
       </li>
     </ul>
   </div>
