--- a/src/main/client/src/app/movie-mgmt/movie-details/movie-details.component.html
+++ b/src/main/client/src/app/movie-mgmt/movie-details/movie-details.component.html
@@ -1,3 +1,39 @@
-<p>
-  movie-details works!
-</p>
+<h2 style="margin-left: 25px;">Movie details</h2>
+
+<section class="container-fluid" style="padding: 5%;">
+  <div class="row">
+    <div class="col-md-6 container-fluid">
+      <div class="row">
+        <div class="col-md-4">Title</div>
+        <div class="col-md-8">{{currentMovie.title}}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Directing</div>
+        <div class="col-md-8">{{currentMovie.directing}}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Genre</div>
+        <div class="col-md-8">{{currentMovie.genre}}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Full description</div>
+        <div class="col-md-8">{{currentMovie.description}}</div>
+      </div>
+
+    </div>
+    <div class="col-md-6">
+      <!--<img [src]="movie.image" style="width:200px"/>-->
+    </div>
+  </div>
+
+
+
+  <!--<div class="container-fluid">-->
+    <!--<div class="row">-->
+      <!--<p>Title {{currentMovie.title}}</p>-->
+      <!--<p>Directing {{currentMovie.directing}}</p>-->
+      <!--<p>Genre {{currentMovie.genre}}</p>-->
+      <!--<p>Full description {{currentMovie.description}}</p>-->
+    <!--</div>-->
+  <!--</div>-->
+</section>
