Extend data model, reorganize backend and implement screenings selection

--- a/src/main/client/src/app/movie-mgmt/movie-overview/movie-overview.component.html
+++ b/src/main/client/src/app/movie-mgmt/movie-overview/movie-overview.component.html
@@ -33,15 +33,19 @@
       <hr/>
       <div class="row">
         <p style="margin-left:15px">Available screenings</p>
-        <div class="col-md-12">
-          <button type="button" [routerLink]="['/app/screening', 1]"
+        <div class="col-md-2 d-inline" *ngFor="let screening of movie.screenings">
+          <button type="button" [routerLink]="['/app/screening', screening.id]"
                   data-toggle="tooltip" title="Click to buy a ticket"
-                  class="btn btn-outline-info btn-sm">11.05.2019 17:00
+                  class="btn btn-outline-info btn-sm d-inline" >{{screening.screeningDate}}
           </button>
-          <button type="button" class="btn btn-outline-info btn-sm"
-                  style="margin:10px">11.05.2019
-            19:15
-          </button>
+          <!--<button type="button" [routerLink]="['/app/screening', 1]"-->
+                  <!--data-toggle="tooltip" title="Click to buy a ticket"-->
+                  <!--class="btn btn-outline-info btn-sm">11.05.2019 17:00-->
+          <!--</button>-->
+          <!--<button type="button" class="btn btn-outline-info btn-sm"-->
+                  <!--style="margin:10px">11.05.2019-->
+            <!--19:15-->
+          <!--</button>-->
         </div>
       </div>
     </div>
