--- a/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
+++ b/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
@@ -1,3 +1,12 @@
-<p>
-  ticket-order works!
-</p>
+<h2 style="margin-left: 25px;">Screening</h2>
+
+<section class="container-fluid" style="padding: 5%;">
+  <div class="row">
+    <div class="col-md-6 container-fluid">
+      <div class="row">
+        <div class="col-md-4">Screening Id</div>
+        <div class="col-md-8">{{currentScreening.id}}</div>
+      </div>
+    </div>
+  </div>
+</section>
