--- a/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
+++ b/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
@@ -4,8 +4,36 @@
   <div class="row">
     <div class="col-md-6 container-fluid">
       <div class="row">
-        <div class="col-md-4">Screening Id</div>
-        <div class="col-md-8">{{currentScreening.id}}</div>
+        <div class="col-md-4">Title</div>
+        <div class="col-md-8">{{currentScreening.movie.title}}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Date</div>
+        <div class="col-md-8">{{currentScreening.screeningDate}}</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Free seats</div>
+        <div class="col-md-8">{{freePlacesCount}}</div>
+      </div>
+    </div>
+    <div class="col-md-6 container-fluid">
+      <div class="col-md-2 d-inline">
+        <button type="button" (click)="buyTicket(20)"
+                data-toggle="tooltip" title="Click to buy regular ticket"
+                class="btn btn-success" >Regular
+        </button>
+      </div>
+      <div class="col-md-2 d-inline">
+          <button type="button" (click)="buyTicket(18)"
+                  data-toggle="tooltip" title="Click to buy student ticket"
+                  class="btn btn-success" >Student
+          </button>
+      </div>
+      <div class="col-md-2 d-inline">
+          <button type="button" (click)="buyTicket(12)"
+                  data-toggle="tooltip" title="Click to buy child ticket"
+                  class="btn btn-success" >Child
+          </button>
       </div>
     </div>
   </div>
