--- a/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
+++ b/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
@@ -15,6 +15,23 @@
         <div class="col-md-4">Free seats</div>
         <div class="col-md-8">{{freePlacesCount}}</div>
       </div>
+      &nbsp;
+      <div class="row">
+          <div class="col-md-4" *ngIf="currentTicket">Ticket</div>
+          <div class="col-md-8">
+            <div *ngIf="currentTicket">
+              {{currentTicket.ticketNumber}}
+            </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-4" *ngIf="currentTicket">Seat</div>
+          <div class="col-md-8">
+            <div *ngIf="currentTicket">
+              {{currentTicket.seat.seatNumber}}
+            </div>
+          </div>
+      </div>
     </div>
     <div class="col-md-6 container-fluid">
       <div class="col-md-2 d-inline">
