Added link to validation in navbar

--- a/src/main/client/src/app/general/nav/nav.component.html
+++ b/src/main/client/src/app/general/nav/nav.component.html
@@ -18,6 +18,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/app/movies">Screenings</a>
+        <a class="nav-link" routerLink="/app/ticket">Validation</a>
       </li>
     </ul>
   </div>
