--- a/src/main/client/src/app/movie-mgmt/movie-details/movie-details.component.html
+++ b/src/main/client/src/app/movie-mgmt/movie-details/movie-details.component.html
@@ -12,10 +12,6 @@
         <div class="col-md-8">{{currentMovie.directing}}</div>
       </div>
       <div class="row">
-        <div class="col-md-4">Genre</div>
-        <div class="col-md-8">{{currentMovie.genre}}</div>
-      </div>
-      <div class="row">
         <div class="col-md-4">Full description</div>
         <div class="col-md-8">{{currentMovie.description}}</div>
       </div>
@@ -32,7 +28,7 @@
     <!--<div class="row">-->
       <!--<p>Title {{currentMovie.title}}</p>-->
       <!--<p>Directing {{currentMovie.directing}}</p>-->
-      <!--<p>Genre {{currentMovie.genre}}</p>-->
+      <!--<p>Genre {{currentMovie.genres}}</p>-->
       <!--<p>Full description {{currentMovie.description}}</p>-->
     <!--</div>-->
   <!--</div>-->
