--- a/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
+++ b/src/main/client/src/app/movie-mgmt/ticket-order/ticket-order.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-6 container-fluid">
       <div class="row">
         <div class="col-md-4">Title</div>
-        <div class="col-md-8">{{currentScreening.movie.title}}</div>
+        <div class="col-md-8">{{currentScreening.movie}}</div>
       </div>
       <div class="row">
         <div class="col-md-4">Date</div>
@@ -16,24 +16,28 @@
         <div class="col-md-8">{{freePlacesCount}}</div>
       </div>
       &nbsp;
-      <div class="row">
-          <div class="col-md-4" *ngIf="currentTicket">Ticket</div>
-          <div class="col-md-8">
-            <div *ngIf="currentTicket">
-              {{currentTicket.ticketNumber}}
-            </div>
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-md-4" *ngIf="currentTicket">Seat</div>
-          <div class="col-md-8">
-            <div *ngIf="currentTicket">
-              {{currentTicket.seat.seatNumber}}
-            </div>
-          </div>
-      </div>
-    </div>
-    <div class="col-md-6 container-fluid">
+
+
+      <!--<div class="row">-->
+          <!--<div class="col-md-4" *ngIf="currentTicket">Ticket</div>-->
+          <!--<div class="col-md-8">-->
+            <!--<div *ngIf="currentTicket">-->
+              <!--{{currentTicket.ticketNumber}}-->
+            <!--</div>-->
+          <!--</div>-->
+      <!--</div>-->
+      <!--<div class="row">-->
+          <!--<div class="col-md-4" *ngIf="currentTicket">Seat</div>-->
+          <!--<div class="col-md-8">-->
+            <!--<div *ngIf="currentTicket">-->
+              <!--{{currentTicket.bookedPlace.seatNumber}}-->
+            <!--</div>-->
+          <!--</div>-->
+      <!--</div>-->
+      <hr/>
+      <p>Select type of ticket to buy</p><br/>
+
+    <div class="col-md-8 container-fluid">
       <div class="col-md-2 d-inline">
         <button type="button" (click)="buyTicket(20)"
                 data-toggle="tooltip" title="Click to buy regular ticket"
@@ -53,5 +57,29 @@
           </button>
       </div>
     </div>
+  </div>
+  </div>
+  <hr *ngIf="currentTicket">
+  <div class="row" *ngIf="currentTicket">
+
+    <p>Bought tickets</p><br/>
+    <table class="table table-hover">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Ticket code</th>
+        <th scope="col">Seat number</th>
+        <th scope="col">Price</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let ticket of boughtTickets; index as i">
+        <th scope="row">{{i+1}}</th>
+        <td>{{ticket.ticketNumber}}</td>
+        <td>{{ticket.bookedPlace.seatNumber}}</td>
+        <td>{{ticket.price}} zł</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </section>
